# Desire-Hunter

./: .env.example  .gitignore  CLAUDE.md  HELP.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/hunt/: route.ts
src/agents/: analyst.py  director.py  researcher.py
src/core/: config.py  interfaces.py
src/domain/: models.py
src/infrastructure/api_clients/: firecrawl_client.py  gemini_client.py  openai_client.py  serper_client.py
src/infrastructure/repositories/: gsheets_repo.py
